# vex

./: .clang-tidy  .gitattributes  CMakeLists.txt  CMakePresets.json  README.md  src.lnk  vex.toml  vex_final_rules.vex  vex_spec_final.vex
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  fuzz.yml  nightly.yml  release.yml
cmake/: AddVexTarget.cmake  FindLLD.cmake  FindLLVM.cmake  FindPolly.cmake  VexConfig.cmake.in  VexCoverage.cmake  VexDependencies.cmake  VexInstall.cmake  VexOptions.cmake  VexPackage.cmake  VexSanitizers.cmake  VexTargetHelpers.cmake  VexTestHelpers.cmake  VexVersion.cmake  VexVersion.cmake.in
cmake/toolchains/: linux-arm64.cmake  linux-x64.cmake  macos-arm64.cmake  wasm.cmake  windows-x64.cmake
docs/internals/: adding-a-pass.md  adding-a-target.md  borrow-checker.md  diagnostic-guide.md  ir-design.md  monomorphization.md  vxl-format.md
docs/spec/: grammar.ebnf  vex_language_spec.md
runtime/: CMakeLists.txt
runtime/include/vex_rt/: alloc.h  arc.h  arena.h  async.h  channel.h  executor.h  future.h  init.h  io.h  panic.h  signal.h  stackguard.h  sync.h  thread.h  tls.h  typeid.h  waker.h  workstealing.h
runtime/src/: alloc.c  arc.c  arena.c  async.c  channel.c  executor.c  init.c  io.c  panic.c  signal.c  stackguard.c  sync.c  thread.c  tls.c  typeid.c  waker.c  workstealing.c
runtime/src/platform/: linux.c  macos.c  wasm.c  windows.c
scripts/: bootstrap.py  build.py  build_debug.py  build_release.py  check_tidy.py  coverage.py  format_all.py  gen_diagnostics.py  gen_token_kinds.py  run_benchmarks.py  run_tests.py  update_version.py
src/AST/: ASTContext.cpp  ASTDumper.cpp  ASTNode.cpp  ASTSerializer.cpp  ASTVisitor.cpp  Attribute.cpp  Decl.cpp  Decorator.cpp  Expr.cpp  Pattern.cpp  Stmt.cpp  Type.cpp  TypeRepr.cpp  Visibility.cpp
src/CodeGen/: AAPCS64ABI.cpp  ABI.cpp  AtomicEmitter.cpp  CodeGen.cpp  ConstantEmitter.cpp  DeclEmitter.cpp  ExprEmitter.cpp  IntrinsicEmitter.cpp  LLVMContext.cpp  LLVMDebugInfo.cpp  LLVMEmitter.cpp  LLVMTypeMapper.cpp  Monomorphizer.cpp  RTTIEmitter.cpp  SIMDEmitter.cpp  SpecRegistry.cpp  StmtEmitter.cpp  SysVABI.cpp  TailCallOptimizer.cpp  TypeEmitter.cpp  VTableEmitter.cpp  WasmABI.cpp  Win64ABI.cpp
src/Core/: Assert.cpp  BumpAllocator.cpp  Diagnostic.cpp  DiagnosticConsumer.cpp  DiagnosticEngine.cpp  DiagnosticIDs.cpp  Error.cpp  FileManager.cpp  InternedString.cpp  MemoryBuffer.cpp  Platform.cpp  SourceLocation.cpp  SourceManager.cpp  StringPool.cpp  VexContext.cpp
src/Driver/: Compilation.cpp  CompilationUnit.cpp  Driver.cpp  IncrementalCache.cpp  Options.cpp  TargetInfo.cpp  main.cpp
src/IR/: AsyncLowering.cpp  ClosureLowering.cpp  DeferLowering.cpp  DropInserter.cpp  ErrorPropLowering.cpp  GeneratorLowering.cpp  IRBlock.cpp  IRBuilder.cpp  IRDumper.cpp  IRFunction.cpp  IRGen.cpp  IRInstr.cpp  IRModule.cpp  IRPassManager.cpp  IRType.cpp  IRValue.cpp  IRVerifier.cpp  LoweringContext.cpp  MatchLowering.cpp  MoveInserter.cpp  VexIR.cpp
src/Lexer/: CharLiteralParser.cpp  Keywords.cpp  Lexer.cpp  LiteralParser.cpp  NumericLiteralParser.cpp  Preprocessor.cpp  StringLiteralParser.cpp  Token.cpp  TokenKind.cpp  TokenStream.cpp  UnicodeCharSets.cpp
src/Linker/: ExportTable.cpp  LibraryManager.cpp  ObjectEmitter.cpp  SharedLibEmitter.cpp  SymbolResolver.cpp  VexLinker.cpp  WasmEmitter.cpp
src/Module/: DependencyGraph.cpp  ImportResolver.cpp  ModuleCache.cpp  ModuleLoader.cpp  PackageResolver.cpp  SelectiveImport.cpp  TomlParser.cpp  TopologicalSort.cpp  VxlReader.cpp  VxlWriter.cpp
src/Optimizer/: DeadCodeElim.cpp  EscapeAnalysis.cpp  InlinerPolicy.cpp  LTOManager.cpp  Optimizer.cpp  PGOInstrumentation.cpp  PassPipeline.cpp  PollyIntegration.cpp
src/Parser/: ParseAttribute.cpp  ParseDecl.cpp  ParseExpr.cpp  ParseGeneric.cpp  ParseImport.cpp  ParsePattern.cpp  ParseStmt.cpp  ParseType.cpp  Parser.cpp  PrattParser.cpp  Precedence.cpp  RecoveryStrategy.cpp
src/Sema/: BorrowChecker.cpp  ComptimeEvaluator.cpp  ConstantFolder.cpp  ControlFlowGraph.cpp  DecoratorProcessor.cpp  DeriveExpander.cpp  ExhaustivenessChecker.cpp  FormatStringChecker.cpp  ImplResolver.cpp  (+21 more)
stdlib/: CMakeLists.txt
tests/: CMakeLists.txt
tests/bench/: BenchCodeGen.cpp  BenchE2E.cpp  BenchLexer.cpp  BenchParser.cpp  BenchTypeChecker.cpp  CMakeLists.txt
tests/fuzz/: CMakeLists.txt  FuzzCodeGen.cpp  FuzzLexer.cpp  FuzzParser.cpp  FuzzSema.cpp
tests/integration/: CMakeLists.txt  async.vex  borrow.vex  classes.vex  closures.vex  comptime.vex  concurrency.vex  enums.vex  error_handling.vex  ffi.vex  format_strings.vex  functions.vex  generators.vex  generics.vex  hello_world.vex  mod_keyword.vex  modules.vex  overflow.vex  ownership.vex  pattern_matching.vex  selective_import.vex  stdlib.vex  structs.vex  traits.vex  variables.vex
tests/integration/runner/: TestRunner.cpp  TestRunner.h
tests/lit/: CMakeLists.txt  lit.cfg.py  vex.cfg
tests/lit/CodeGen/: ir_output.vex
tests/lit/Errors/: expected_errors.vex
tests/lit/Lexer/: basic.vex
tests/lit/Parser/: decls.vex
tests/lit/Sema/: types.vex
tests/unit/: CMakeLists.txt
tests/unit/CodeGen/: ABITest.cpp  DebugInfoTest.cpp  LLVMEmitTest.cpp  MonomorphizerTest.cpp  VTableTest.cpp
tests/unit/Core/: DiagnosticTest.cpp  SourceLocationTest.cpp
tests/unit/IR/: AsyncLoweringTest.cpp  DropInsertionTest.cpp  GeneratorLoweringTest.cpp  IRGenTest.cpp  IRVerifierTest.cpp  LoweringTest.cpp
tests/unit/Lexer/: LexerTest.cpp  LiteralTest.cpp  TokenTest.cpp  UnicodeTest.cpp
tests/unit/Module/: DependencyGraphTest.cpp  ImportResolverTest.cpp  VxlRoundtripTest.cpp
tests/unit/Parser/: DeclParseTest.cpp  ExprParseTest.cpp  ImportParseTest.cpp  PatternParseTest.cpp  RecoveryTest.cpp  StmtParseTest.cpp  TypeParseTest.cpp
tests/unit/Sema/: BorrowCheckerTest.cpp  ComptimeTest.cpp  DeriveTest.cpp  ExhaustivenessTest.cpp  ImportTest.cpp  LifetimeTest.cpp  MROTest.cpp  ModKeywordTest.cpp  MoveCheckerTest.cpp  NameResolutionTest.cpp  OverloadTest.cpp  SelectiveImportTest.cpp  TypeCheckerTest.cpp  TypeInferenceTest.cpp  VisibilityTest.cpp
(+262 files in other folders)
